Nav: fix gap between logo and links

--- a/src/modules/nav/_nav.sass
+++ b/src/modules/nav/_nav.sass
@@ -10,6 +10,7 @@
 	flex-direction: row
 	align-items: center
 	justify-content: space-between
+	gap: 1.25rem
 	width: 100%
 	@extend %container-padding
 	$nav-height: 70px
@@ -105,7 +106,7 @@
 			flex-direction: row
 			width: fit-content
 			height: 100%
-			gap: 20px
+			gap: 1.25rem
 
 		&--active
 			right: 0
